efk-install/efk-fluentd.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluentd
  namespace: efk
spec:
  selector:
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
      name: fluentd
    spec:
      containers:
      - name: fluentd
        # image: gcr.io/google_containers/fluentd-elasticsearch:1.3
        image: fluent/fluentd-kubernetes-daemonset:v1-debian-elasticsearch
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: containers
          mountPath: /var/lib/docker/containers
      volumes:
        - hostPath:
            path: /var/log
          name: varlog
        - hostPath:
            path: /var/lib/docker/containers
          name: containers
