efk-install/efk-kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: efk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          value: http://elasticsearch:9200
        name: kibana
        image: docker.elastic.co/kibana/kibana:5.5.1
        ports: 
          - containerPort: 5601
