efk-install/efk-elasticrearch.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: efk
  name: elasticsearch
  namespace: efk
spec:
  ports:
  - port: 9200
  selector:
    app: efk

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: efk
spec:
  replicas: 1
  selector:  # 添加 selector
    matchLabels:
      app: efk
  template:
    metadata:
      labels:
        app: efk
    spec:
      containers:
      - name: es
        image: docker.elastic.co/elasticsearch/elasticsearch:5.5.1
        ports:
        - containerPort: 9200
